--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "16.7.0-alpha.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
+    "recharts": "^1.4.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.7",
     "redux-observable": "^1.0.0"
