--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "16.7.0-alpha.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
+    "react-scroll": "^1.7.10",
     "react-spring": "^7.2.5",
     "recharts": "^1.4.1",
     "redux": "^4.0.1",
