--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "immutable": "^4.0.0-rc.12",
     "node-sass": "^4.11.0",
     "react": "16.7.0-alpha.2",
+    "react-confirm-alert": "^2.0.7",
     "react-dom": "16.7.0-alpha.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
